--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.4",
     "lucide-react": "^0.446.0",
-    "next": "14.2.13",
-    "next-auth": "^4.24.10",
+    "next": "^15.1.2",
+    "next-auth": "^4.24.7",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
