--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "framer-motion": "^11.11.4",
     "lucide-react": "^0.446.0",
     "next": "^15.1.2",
+    "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
